chore: Add comments for global class usage

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -16,3 +16,11 @@ html {
 body {
 	font-size: 1.6rem;
 }
+
+:global {
+  // global classes in here...
+  // usage: 
+  // .anotherClassInAnotherComp {
+  //    composes: globalClass from global;
+  // }
+}
