--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,7 +2,7 @@
 //! utils
 @import "utils/_helpers.scss";
 @import "utils/_mixins.scss";
-@import "utils/_variables.scss";
+@import "utils/_vars.scss";
 
 //! base
 @import "base/_reset.scss";
